--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/good": "^8.2.0",
+    "@hapi/good-console": "^8.1.0",
+    "@hapi/good-squeeze": "^5.2.0",
     "@hapi/hapi": "^18.3.1",
     "@hapi/inert": "^5.2.1",
     "@hapi/joi": "^15.1.0",
@@ -21,8 +24,9 @@
     "hapi-swagger": "^10.0.2",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^1.6.5",
-    "sequelize": "^5.10.2",
-    "sequelize-cli": "^5.5.0"
+    "sequelize": "^5.10.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "sequelize-cli": "^5.5.0"
+  }
 }
