更新项目源码

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "nodehapidev",
+  "name": "myapiserver",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "服务器Api开发",
+  "main": "app.js",
   "scripts": {
     "start": "node ./app.js",
-    "dev": "node --inspect ./app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon --inspect ./app.js",
+    "test": "node test/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@hapi/code": "^6.0.0",
     "@hapi/lab": "^19.1.0",
+    "nodemon": "^1.19.1",
     "sequelize-cli": "^5.5.0"
   }
 }
